# wp-og-takumi

./: .gitignore  Makefile  README.md  composer.json  hannies-og.php  package.json  phpunit.xml  webpack.config.js  wp-og-takumi.php
docker/: Dockerfile
includes/: class-og-admin.php  class-og-endpoint.php  class-og-meta.php  class-og-renderer.php  class-og-template-engine.php
lib/: takumi_og.h
scripts/: download-fonts.sh
src/: og-admin.ts
takumi-og-ffi/: Cargo.toml  cbindgen.toml
takumi-og-ffi/src/: lib.rs
templates/: default.html  destination.html  guide.html  page.html  post.html  tour.html
tests/: OgEndpointTest.php  OgMetaOutputTest.php  TemplateCascadeTest.php  TemplateParserTest.php  VariableSubstitutionTest.php  bootstrap.php  ffi-smoke-test.php  integration-test.php
