[package]
name = "wp-og-takumi-ffi"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
takumi = { version = "1.0.0-beta.7", default-features = false, features = ["detailed_css_error"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
